# TetGeodesicsInHeat

./: .gitmodules  CMakeLists.txt  README.md  setup.sh
src/: CMakeLists.txt  cluster.cpp  cluster.h  main.cpp  obj2poly.py  run_code.sh  tet.cpp  tet.h  vector3.h  vector3.ipp
src/cuda/: cg.cu  cg.cuh  jacobi.cu  jacobi.cuh  matvel.cu
src/polyscope/: tet_mesh.cpp  tet_mesh.h  tet_mesh_quantity.h  tet_scalar_quantity.cpp  tet_scalar_quantity.h  tet_vector_quantity.cpp  tet_vector_quantity.h
src/tests/: CMakeLists.txt  ExampleTests.h  test.cpp  test_utils.h  tetTest.h
test_results/: 11-23-2019_cg.txt
